AE: Fix system app remover to work in 6.0
Change-Id: I532289ac8059afc946db7ddd2cbdf465d440fd44